afegir tab amb imatge d'una font externa

--- a/src/main/resources/fxml/chartExample.fxml
+++ b/src/main/resources/fxml/chartExample.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.effect.*?>
 <?import javafx.scene.chart.*?>
 <?import java.lang.*?>
@@ -28,6 +29,15 @@
                     </yAxis>
                   </BarChart>
                </content>
+            </Tab>
+            <Tab text="Imatge">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <ImageView fx:id="img01" fitHeight="334.0" fitWidth="384.0" layoutX="108.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="108.0" AnchorPane.rightAnchor="108.0" AnchorPane.topAnchor="18.0" />
+                     </children>
+                  </AnchorPane>
+              </content>
             </Tab>
         </tabs>
       </TabPane>
