--- a/src/main/resources/fxml/mainWindow.fxml
+++ b/src/main/resources/fxml/mainWindow.fxml
@@ -4,10 +4,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uf2.mp3.control.MainWindow">
+<AnchorPane fx:id="anchorMain" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uf2.mp3.control.MainWindow">
    <children>
       <Button fx:id="btn01" layoutX="135.0" layoutY="54.0" mnemonicParsing="false" onMouseClicked="#btnClick" text="Add" AnchorPane.leftAnchor="135.0" AnchorPane.topAnchor="54.0" />
       <ListView fx:id="lsvLlista01" layoutX="200.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="100.0" />
       <TextField fx:id="txtDada" layoutX="200.0" layoutY="54.0" prefHeight="25.0" prefWidth="200.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="54.0" />
+      <Button fx:id="btnChart" layoutX="26.0" layoutY="351.0" mnemonicParsing="false" onMouseClicked="#clickChart" text="Close" AnchorPane.bottomAnchor="24.0" AnchorPane.leftAnchor="26.0" />
    </children>
 </AnchorPane>
