--- a/src/main/resources/fxml/filmsWindow.fxml
+++ b/src/main/resources/fxml/filmsWindow.fxml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<?import javafx.scene.text.Text?>
-<?import javafx.scene.text.Font?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.chart.PieChart?>
-<?import javafx.scene.shape.Circle?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uf2.mp3.control.FilmsController">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="862.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uf2.mp3.control.FilmsController">
     <children>
-        <TabPane fx:id="tabPane" prefHeight="500.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <TabPane fx:id="tabPane" prefHeight="512.0" prefWidth="862.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <tabs>
                 <Tab text="Peliculas">
                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #44007A;">
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="475.0" prefWidth="833.0" style="-fx-background-color: #44007A;">
                             <children>
-                                <AnchorPane cache="true" layoutX="412.0" layoutY="-8.0" prefHeight="486.0" prefWidth="396.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="-7.0" AnchorPane.leftAnchor="412.0" AnchorPane.rightAnchor="-8.0" AnchorPane.topAnchor="-8.0">
+                                <AnchorPane cache="true" layoutX="412.0" layoutY="-8.0" prefHeight="491.0" prefWidth="390.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="-6.0" AnchorPane.leftAnchor="412.0" AnchorPane.rightAnchor="-4.0" AnchorPane.topAnchor="-8.0">
                                     <children>
                                         <AnchorPane fx:id="paneSesion" layoutX="-418.0" prefHeight="482.0" prefWidth="809.0" style="-fx-background-color: #ffffff;">
                                             <children>
@@ -41,7 +47,7 @@
                                                     </padding>
                                                 </ListView>
                                             </children></AnchorPane>
-                                        <AnchorPane prefHeight="486.0" prefWidth="397.0" style="-fx-background-color: #ffffff;">
+                                        <AnchorPane layoutY="5.0" prefHeight="481.0" prefWidth="476.0" style="-fx-background-color: #ffffff;">
                                             <children>
                                                 <Text fx:id="textTitleFilm" fill="#7c7c7c" strokeType="OUTSIDE" strokeWidth="0.0" text="Titulo" wrappingWidth="319.7294921875" AnchorPane.bottomAnchor="391.984375" AnchorPane.leftAnchor="32.0" AnchorPane.rightAnchor="44.2705078125" AnchorPane.topAnchor="72.734375">
                                                     <font>
@@ -72,28 +78,27 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
+                                
                                 <ListView fx:id="listViewCiclos" layoutX="85.0" layoutY="134.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="140.0" AnchorPane.leftAnchor="58.0" AnchorPane.rightAnchor="437.0" AnchorPane.topAnchor="90.0" />
                                 <ListView fx:id="listViewFilmCiclos" layoutX="437.0" layoutY="90.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="140.0" AnchorPane.leftAnchor="437.0" AnchorPane.rightAnchor="58.0" AnchorPane.topAnchor="90.0" />
                             </children></AnchorPane>
                     </content>
                 </Tab>
-                <Tab text="Gráfico">
+                <Tab text="Estadisticas">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
-                                <Pane fx:id="pane" layoutX="614.0" layoutY="67.0" prefHeight="68.0" prefWidth="190.0" />
-                                <PieChart fx:id="pieChart" layoutX="150.0" layoutY="34.0" />
+                                <Pane fx:id="pane" layoutX="487.0" layoutY="40.0" prefHeight="36.0" prefWidth="175.0" />
+                                <PieChart fx:id="pieChart" layoutX="35.0" layoutY="63.0" prefHeight="255.0" prefWidth="419.0" />
+                        <Label layoutX="204.0" layoutY="33.0" text="Peliculas por año:">
+                           <font>
+                              <Font size="30.0" />
+                           </font>
+                        </Label>
                             </children></AnchorPane>
                     </content>
                 </Tab>
             </tabs>
         </TabPane>
-        <HBox layoutX="715.0" prefHeight="28.0" prefWidth="72.0">
-            <children>
-                <Circle fx:id="bntMinimizar" fill="#68c927" onMouseClicked="#handlerMouseEvent" radius="14.0" scaleX="0.5" scaleY="0.5" scaleZ="0.5" stroke="#99999900" strokeType="INSIDE" strokeWidth="2.0" />
-                <Circle fx:id="btnAmpliar" fill="#ffba52" onMouseClicked="#handlerMouseEvent" radius="14.0" scaleX="0.5" scaleY="0.5" scaleZ="0.5" stroke="#99999900" strokeType="INSIDE" strokeWidth="2.0" />
-                <Circle fx:id="btnCerrar" fill="#ff5100" onMouseClicked="#handlerMouseEvent" radius="14.0" scaleX="0.5" scaleY="0.5" scaleZ="0.5" stroke="#99999900" strokeType="INSIDE" strokeWidth="2.0" />
-            </children></HBox>
-
     </children>
 </AnchorPane>
