--- a/src/main/resources/fxml/filmsWindow.fxml
+++ b/src/main/resources/fxml/filmsWindow.fxml
@@ -1,37 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.chart.PieChart?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="862.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uf2.mp3.control.FilmsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="862.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uf2.mp3.control.FilmsController">
     <children>
         <TabPane fx:id="tabPane" prefHeight="512.0" prefWidth="862.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <tabs>
                 <Tab text="Peliculas">
                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="475.0" prefWidth="833.0" style="-fx-background-color: #44007A;">
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="475.0" prefWidth="833.0" style="-fx-background-color: #00ebc4;">
                             <children>
                                 <AnchorPane cache="true" layoutX="412.0" layoutY="-8.0" prefHeight="491.0" prefWidth="390.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="-6.0" AnchorPane.leftAnchor="412.0" AnchorPane.rightAnchor="-4.0" AnchorPane.topAnchor="-8.0">
                                     <children>
-                                        <AnchorPane fx:id="paneSesion" layoutX="-418.0" prefHeight="482.0" prefWidth="809.0" style="-fx-background-color: #ffffff;">
+                                        <AnchorPane fx:id="paneSesion" layoutX="-419.0" layoutY="5.0" prefHeight="484.0" prefWidth="870.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="-419.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="5.0">
                                             <children>
-                                                <Text fx:id="sesionTitle" fill="#00000096" layoutX="30.0" layoutY="-25.0" strokeType="OUTSIDE" strokeWidth="0.0" text="sesion" wrappingWidth="646.7294921875" y="80.0">
+                                                <Text fx:id="sesionTitle" fill="#00000096" layoutX="30.0" layoutY="-25.0" strokeType="OUTSIDE" strokeWidth="0.0" text="sesion" wrappingWidth="646.7294921875" y="80.0" AnchorPane.bottomAnchor="415.63232421875" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="192.2705078125" AnchorPane.topAnchor="29.93798828125">
                                                     <font>
                                                         <Font name="System Bold" size="27.0" />
                                                     </font></Text>
-                                                <TableView fx:id="tableViewSesiones" layoutX="65.0" layoutY="122.0" prefHeight="336.0" prefWidth="678.0">
+                                                <TableView fx:id="tableViewSesiones" layoutX="65.0" layoutY="122.0" prefHeight="336.0" prefWidth="678.0" AnchorPane.bottomAnchor="19.0" AnchorPane.leftAnchor="65.0" AnchorPane.rightAnchor="126.0" AnchorPane.topAnchor="122.0">
                                                     <columns>
                                                         <TableColumn fx:id="tableColumnTitleCinema" minWidth="150.0" prefWidth="75.0" text="Cine" />
                                                         <TableColumn fx:id="tableColumnSesion" minWidth="150.0" prefWidth="75.0" text="Sesion" />
@@ -39,22 +31,22 @@
                                                 </TableView>
                                             </children>
                                         </AnchorPane>
-                                        <AnchorPane layoutX="-421.0" prefHeight="487.0" prefWidth="830.0" style="-fx-background-color: #44007A;">
+                                        <AnchorPane layoutX="-412.0" layoutY="10.0" prefHeight="477.0" prefWidth="862.0" style="-fx-background-color: #00ebc4;" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="-412.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="10.0">
                                             <children>
-                                                <ListView fx:id="listViewFilms" layoutX="70.0" layoutY="72.0" onMouseClicked="#displaySelected" prefHeight="343.0" prefWidth="289.0" style="-fx-background-color: #540096;" AnchorPane.bottomAnchor="72.0" AnchorPane.leftAnchor="70.0" AnchorPane.rightAnchor="471.0" AnchorPane.topAnchor="72.0">
+                                                <ListView fx:id="listViewFilms" layoutX="43.0" layoutY="72.0" onMouseClicked="#displaySelected" prefHeight="333.0" prefWidth="325.0" style="-fx-background-color: #00d1ae;" AnchorPane.bottomAnchor="72.0" AnchorPane.leftAnchor="43.0" AnchorPane.topAnchor="72.0">
                                                     <padding>
                                                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                                     </padding>
                                                 </ListView>
                                             </children></AnchorPane>
-                                        <AnchorPane layoutY="5.0" prefHeight="481.0" prefWidth="476.0" style="-fx-background-color: #ffffff;">
+                                        <AnchorPane layoutY="5.0" prefHeight="481.0" prefWidth="476.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-22.0" AnchorPane.topAnchor="5.0">
                                             <children>
-                                                <Text fx:id="textTitleFilm" fill="#7c7c7c" strokeType="OUTSIDE" strokeWidth="0.0" text="Titulo" wrappingWidth="319.7294921875" AnchorPane.bottomAnchor="391.984375" AnchorPane.leftAnchor="32.0" AnchorPane.rightAnchor="44.2705078125" AnchorPane.topAnchor="72.734375">
+                                                <Text fx:id="textTitleFilm" fill="#7c7c7c" strokeType="OUTSIDE" strokeWidth="0.0" text="Titulo" wrappingWidth="319.7294921875" AnchorPane.leftAnchor="32.0" AnchorPane.topAnchor="72.734375">
                                                     <font>
                                                         <Font name="System Bold" size="16.0" />
                                                     </font>
                                                 </Text>
-                                                <ImageView fx:id="imageFilm" fitHeight="181.0" fitWidth="114.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="186.0" AnchorPane.leftAnchor="32.0" AnchorPane.rightAnchor="250.0" AnchorPane.topAnchor="119.0" />
+                                                <ImageView fx:id="imageFilm" fitHeight="181.0" fitWidth="114.0" layoutX="32.0" layoutY="102.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="32.0" AnchorPane.topAnchor="102.0" />
                                                 <Text fx:id="directorTitle" fill="#616161" layoutX="170.0" layoutY="178.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dirección:">
                                                     <font>
                                                         <Font name="System Bold" size="12.0" />
@@ -67,7 +59,7 @@
                                                     </font>
                                                 </Text>
                                                 <Text fx:id="añoFilm" fill="#4a4a4a" layoutX="170.0" layoutY="151.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-                                                <Button fx:id="buttonSesion" layoutX="238.0" layoutY="427.0" mnemonicParsing="false" onMouseClicked="#clickFilmSesion" prefHeight="26.0" prefWidth="134.0" text="Ver sesiones" />
+                                                <Button fx:id="buttonSesion" layoutX="238.0" layoutY="427.0" mnemonicParsing="false" onMouseClicked="#clickFilmSesion" prefHeight="26.0" prefWidth="134.0" text="ver sesiones" AnchorPane.bottomAnchor="33.0" AnchorPane.rightAnchor="104.0" />
                                             </children></AnchorPane>
                                     </children></AnchorPane>
                             </children>
@@ -78,7 +70,7 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
-                                
+
                                 <ListView fx:id="listViewCiclos" layoutX="85.0" layoutY="134.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="140.0" AnchorPane.leftAnchor="58.0" AnchorPane.rightAnchor="437.0" AnchorPane.topAnchor="90.0" />
                                 <ListView fx:id="listViewFilmCiclos" layoutX="437.0" layoutY="90.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="140.0" AnchorPane.leftAnchor="437.0" AnchorPane.rightAnchor="58.0" AnchorPane.topAnchor="90.0" />
                             </children></AnchorPane>
@@ -88,9 +80,9 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
-                                <Pane fx:id="pane" layoutX="310.0" layoutY="31.0" prefHeight="36.0" prefWidth="175.0" />
-                                <PieChart fx:id="pieChart" layoutX="27.0" layoutY="98.0" prefHeight="320.0" prefWidth="419.0" />
-                        <Label layoutX="27.0" layoutY="24.0" text="Peliculas por año:">
+                                <Pane fx:id="pane" layoutX="487.0" layoutY="40.0" prefHeight="36.0" prefWidth="175.0" />
+                                <PieChart fx:id="pieChart" layoutX="35.0" layoutY="63.0" prefHeight="255.0" prefWidth="419.0" />
+                        <Label layoutX="204.0" layoutY="33.0" text="Peliculas por año:">
                            <font>
                               <Font size="30.0" />
                            </font>
