--- a/src/main/resources/fxml/filmsWindow.fxml
+++ b/src/main/resources/fxml/filmsWindow.fxml
@@ -1,21 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.chart.PieChart?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="862.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uf2.mp3.control.FilmsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="862.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uf2.mp3.control.FilmsController">
     <children>
         <TabPane fx:id="tabPane" prefHeight="512.0" prefWidth="862.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <tabs>
@@ -23,9 +15,9 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="475.0" prefWidth="833.0" style="-fx-background-color: #00ebc4;">
                             <children>
-                                <AnchorPane cache="true" layoutX="412.0" layoutY="-8.0" prefHeight="491.0" prefWidth="390.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="-6.0" AnchorPane.leftAnchor="412.0" AnchorPane.rightAnchor="-4.0" AnchorPane.topAnchor="-8.0">
+                                <AnchorPane cache="true" layoutX="412.0" layoutY="-2.0" prefHeight="487.0" prefWidth="450.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="-6.0" AnchorPane.leftAnchor="412.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-2.0">
                                     <children>
-                                        <AnchorPane fx:id="paneSesion" layoutX="-419.0" layoutY="5.0" prefHeight="484.0" prefWidth="870.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="-419.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="5.0">
+                                        <AnchorPane fx:id="paneSesion" layoutX="-412.0" layoutY="-1.0" prefHeight="484.0" prefWidth="862.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="-412.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-1.0">
                                             <children>
                                                 <Text fx:id="sesionTitle" fill="#00000096" layoutX="30.0" layoutY="-25.0" strokeType="OUTSIDE" strokeWidth="0.0" text="sesion" wrappingWidth="646.7294921875" y="80.0" AnchorPane.bottomAnchor="415.63232421875" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="192.2705078125" AnchorPane.topAnchor="29.93798828125">
                                                     <font>
@@ -39,22 +31,22 @@
                                                 </TableView>
                                             </children>
                                         </AnchorPane>
-                                        <AnchorPane layoutX="-412.0" layoutY="10.0" prefHeight="477.0" prefWidth="862.0" style="-fx-background-color: #00ebc4;" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="-412.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="10.0">
+                                        <AnchorPane layoutX="-414.0" layoutY="2.0" prefHeight="479.0" prefWidth="411.0" style="-fx-background-color: #00ebc4;" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="-414.0" AnchorPane.rightAnchor="453.0" AnchorPane.topAnchor="2.0">
                                             <children>
-                                                <ListView fx:id="listViewFilms" layoutX="43.0" layoutY="72.0" onMouseClicked="#displaySelected" prefHeight="333.0" prefWidth="325.0" style="-fx-background-color: #00d1ae;" AnchorPane.bottomAnchor="72.0" AnchorPane.leftAnchor="43.0" AnchorPane.topAnchor="72.0">
+                                                <ListView fx:id="listViewFilms" layoutX="74.0" layoutY="65.0" onMouseClicked="#displaySelected" prefHeight="350.0" prefWidth="280.0" style="-fx-background-color: #00d1ae;" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="74.0" AnchorPane.rightAnchor="58.0" AnchorPane.topAnchor="65.0">
                                                     <padding>
                                                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                                     </padding>
                                                 </ListView>
                                             </children></AnchorPane>
-                                        <AnchorPane layoutY="5.0" prefHeight="481.0" prefWidth="476.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-22.0" AnchorPane.topAnchor="5.0">
+                                        <AnchorPane layoutX="-2.0" prefHeight="481.0" prefWidth="455.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="-3.0" AnchorPane.topAnchor="1.0">
                                             <children>
-                                                <Text fx:id="textTitleFilm" fill="#7c7c7c" strokeType="OUTSIDE" strokeWidth="0.0" text="Titulo" wrappingWidth="319.7294921875" AnchorPane.leftAnchor="32.0" AnchorPane.topAnchor="72.734375">
+                                                <Text fx:id="textTitleFilm" fill="#7c7c7c" layoutX="59.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Titulo" wrappingWidth="319.7294921875">
                                                     <font>
                                                         <Font name="System Bold" size="16.0" />
                                                     </font>
                                                 </Text>
-                                                <ImageView fx:id="imageFilm" fitHeight="181.0" fitWidth="114.0" layoutX="32.0" layoutY="102.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="32.0" AnchorPane.topAnchor="102.0" />
+                                                <ImageView fx:id="imageFilm" fitHeight="181.0" fitWidth="114.0" layoutX="32.0" layoutY="102.0" pickOnBounds="true" preserveRatio="true" />
                                                 <Text fx:id="directorTitle" fill="#616161" layoutX="170.0" layoutY="178.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dirección:">
                                                     <font>
                                                         <Font name="System Bold" size="12.0" />
