--- a/src/main/java/ciclos.fxml
+++ b/src/main/java/ciclos.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #00d4bd;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PeliculasController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #00d4bd;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CiclosController">
          <children>
             <TableView fx:id="tableViewPeliculas" layoutY="63.0" prefHeight="337.0" prefWidth="610.0">
                <columns>
